force-app/main/default/objects/WebEngage_Task__c/WebEngage_Task__c.object-meta.xml
<CustomObject>
    <label>WebEngage Task</label>
    <nameField>
        <label>WebEngage Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WebEngage Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>