force-app/main/default/objects/WebEngage_Task__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>WebEngage Tasks</relationshipLabel>
    <relationshipName>WebEngage_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>