force-app/main/default/objects/WebEngage_Task__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>WebEngage Tasks</relationshipLabel>
    <relationshipName>WebEngage_Tasks_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>