force-app/main/default/objects/WebEngage_Task__c/listViews/Lead_Events.listView-meta.xml
<ListView>
    <fullName>Lead_Events</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Change Event</value>
    </filters>
    <label>Lead Change Events</label>
    <language>en_US</language>
</ListView>