force-app/main/default/objects/WebEngage_Task__c/listViews/Lead_User_Events.listView-meta.xml
<ListView>
    <fullName>Lead_User_Events</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>User Event</value>
    </filters>
    <label>Lead User Events</label>
    <language>en_US</language>
</ListView>