force-app/main/default/objects/WebEngage_Task__c/listViews/User_Events.listView-meta.xml
<ListView>
    <fullName>User_Events</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>User Event</value>
    </filters>
    <label>User Events</label>
    <language>en_US</language>
</ListView>